Fix columns slightly off alignment

--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -17,12 +17,13 @@ $width-sm: 750px;
 }
 
 .container {
-    padding: 0 15px;
-    margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .row {
-    margin: 0px -15px;
     display: table;
     table-layout: fixed;
     height: 100%;
