--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -31,5 +31,5 @@ ul {
 }
 
 section {
-    padding: 10px 0;
+    padding: 20px 0;
 }
